latex_parser.py: improved grammar structure
- added support for 'D' covariant derivative operator
- improved behavior for parsing exponential function
- fixed autogenerated indexing issue with '_d' modifier
- added variable token to resolve conflict with 'D' operator
- added inference support for permutation symbol and kronecker delta

--- a/Tutorial-LaTeX_Parser_Interface.ipynb
+++ b/Tutorial-LaTeX_Parser_Interface.ipynb
@@ -179,7 +179,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$$ \\mathop{s_n} = \\left(1 + \\frac{1}{n}\\right)^n $$"
+    "$$ \\mathit{s_n} = \\left(1 + \\frac{1}{n}\\right)^n $$"
    ]
   },
   {
@@ -196,7 +196,7 @@
     }
    ],
    "source": [
-    "parse(r'\\mathop{s_n} = \\left(1 + \\frac{1}{n}\\right)^n')\n",
+    "parse(r'\\mathit{s_n} = \\left(1 + \\frac{1}{n}\\right)^n')\n",
     "print('s_n =', s_n)"
    ]
   },
@@ -441,7 +441,7 @@
    ],
    "source": [
     "parse(r\"\"\"\n",
-    "    % define permutation epsilonDDD (3D);\n",
+    "    % define epsilonDDD (3D);\n",
     "    % define vU (3D), wU (3D);\n",
     "    u_i = \\epsilon_{ijk} v^j w^k\n",
     "\"\"\")"
@@ -504,7 +504,7 @@
    "source": [
     "print(parse(r\"\"\"\n",
     "    % define anti01 FUU (4D), metric gDD (4D), const k;\n",
-    "    J^\\mu = (4\\pi k)^{-1} \\vphantom{_d} \\nabla_\\nu F^{\\mu\\nu}\n",
+    "    J^\\mu = (4\\pi k)^{-1} \\vphantom{variable} \\nabla_\\nu F^{\\mu\\nu}\n",
     "\"\"\"))"
    ]
   },
@@ -534,7 +534,7 @@
    "source": [
     "print(parse(r\"\"\"\n",
     "    % define anti01 FUU (4D), metric ghatDD (4D), const k;\n",
-    "    J^\\mu = (4\\pi k)^{-1} \\vphantom{_d} \\hat{\\nabla}_\\nu F^{\\mu\\nu}\n",
+    "    J^\\mu = (4\\pi k)^{-1} \\vphantom{variable} \\hat{\\nabla}_\\nu F^{\\mu\\nu}\n",
     "\"\"\"))"
    ]
   },
@@ -567,7 +567,7 @@
    "outputs": [],
    "source": [
     "parse(r\"\"\"\n",
-    "    % define kronecker deltaDD (4D);\n",
+    "    % define deltaDD (4D);\n",
     "    % define const G, const M;\n",
     "    % parse g_{\\mu\\nu} = \\delta_{\\mu\\nu};\n",
     "    \\begin{align}\n",
@@ -913,14 +913,14 @@
     "#### Example 6 (2). [Hamiltonian/Momentum Constraint](https://en.wikipedia.org/wiki/Hamiltonian_constraint)\n",
     "LaTeX Source | Rendered LaTeX\n",
     ":----------- | :-------------\n",
-    "<pre><code>&#92;begin{align}<br>&emsp;&emsp;&emsp;K^{ij} &= \\gamma^{ik} \\gamma^{jl} K_{kl} &#92;&#92;<br>&emsp;&emsp;&emsp;R_{ij} &= \\partial_k \\Gamma^k_{ij} - \\partial_j \\Gamma^k_{ik}<br>&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;+ \\Gamma^k_{ij}\\Gamma^l_{kl} - \\Gamma^l_{ik}\\Gamma^k_{lj} &#92;&#92;<br>&emsp;&emsp;&emsp;R &= \\gamma^{ij} R_{ij} &#92;&#92;<br>&emsp;&emsp;&emsp;E &= \\frac{1}{16\\pi}\\left(R + K^{{2}} - K_{ij}K^{ij}\\right) &#92;&#92;<br>&emsp;&emsp;&emsp;p_i &= \\frac{1}{8\\pi}\\left(\\nabla_j \\gamma^{jk}K_{ki} - \\nabla_i K\\right)<br>&#92;end{align}</code></pre>|$$\n",
+    "<pre><code>&#92;begin{align}<br>&emsp;&emsp;&emsp;K^{ij} &= \\gamma^{ik} \\gamma^{jl} K_{kl} &#92;&#92;<br>&emsp;&emsp;&emsp;R_{ij} &= \\partial_k \\Gamma^k_{ij} - \\partial_j \\Gamma^k_{ik}<br>&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;+ \\Gamma^k_{ij}\\Gamma^l_{kl} - \\Gamma^l_{ik}\\Gamma^k_{lj} &#92;&#92;<br>&emsp;&emsp;&emsp;R &= \\gamma^{ij} R_{ij} &#92;&#92;<br>&emsp;&emsp;&emsp;E &= \\frac{1}{16\\pi}\\left(R + K^{{2}} - K_{ij}K^{ij}\\right) &#92;&#92;<br>&emsp;&emsp;&emsp;p_i &= \\frac{1}{8\\pi}\\left(D_j \\gamma^{jk}K_{ki} - D_i K\\right)<br>&#92;end{align}</code></pre>|$$\n",
     "\\begin{align}\n",
     "    K^{ij} &= \\gamma^{ik} \\gamma^{jl} K_{kl} \\\\\n",
     "    R_{ij} &= \\partial_k \\Gamma^k_{ij} - \\partial_j \\Gamma^k_{ik}\n",
     "        + \\Gamma^k_{ij}\\Gamma^l_{kl} - \\Gamma^l_{ik}\\Gamma^k_{lj} \\\\\n",
     "    R &= \\gamma^{ij} R_{ij} \\\\\n",
     "    E &= \\frac{1}{16\\pi}\\left(R + K^{{2}} - K_{ij}K^{ij}\\right) \\\\\n",
-    "    p_i &= \\frac{1}{8\\pi}\\left(\\nabla_j \\gamma^{jk}K_{ki} - \\nabla_i K\\right)\n",
+    "    p_i &= \\frac{1}{8\\pi}\\left(D_j \\gamma^{jk}K_{ki} - D_i K\\right)\n",
     "\\end{align}\n",
     "$$"
    ]
@@ -938,7 +938,7 @@
     "            + \\Gamma^k_{ij}\\Gamma^l_{kl} - \\Gamma^l_{ik}\\Gamma^k_{lj} \\\\\n",
     "        R &= \\gamma^{ij} R_{ij} \\\\\n",
     "        E &= \\frac{1}{16\\pi}\\left(R + K^{{2}} - K_{ij}K^{ij}\\right) \\\\\n",
-    "        p_i &= \\frac{1}{8\\pi}\\left(\\nabla_j \\gamma^{jk} K_{ki} - \\nabla_i K\\right)\n",
+    "        p_i &= \\frac{1}{8\\pi}\\left(D_j \\gamma^{jk} K_{ki} - D_i K\\right)\n",
     "    \\end{align}\n",
     "\"\"\")\n",
     "Parser.continue_parsing = False"
@@ -1078,16 +1078,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ParseError: T_{\\mu\\nu} = \\partial_\\nu v_\\mu\n",
-      "                                      ^\n",
-      "cannot differentiate undefined tensor 'vD' at position 62\n"
+      "ParseError: % define deriv numeric;\n",
+      "                           ^\n",
+      "expected token MODIFIER at position 24\n"
      ]
     }
    ],
    "source": [
     "try:\n",
     "    parse(r\"\"\"\n",
-    "        % define deriv _d;\n",
+    "        % define deriv numeric;\n",
     "        T_{\\mu\\nu} = \\partial_\\nu v_\\mu\n",
     "    \"\"\")\n",
     "except ParseError as err:\n",
