--- a/NRPyPN/NRPyPN.ipynb
+++ b/NRPyPN/NRPyPN.ipynb
@@ -135,7 +135,7 @@
     "               nchi1x=nchi1x,nchi1y=nchi1y,nchi1z=nchi1z,\n",
     "               nchi2x=nchi2x,nchi2y=nchi2y,nchi2z=nchi2z)\n",
     "\n",
-    "nPr = num_eval(pr.p_r.subs(gamma_EulerMascheroni,0.5772156649015328606065120900824024310421),\n",
+    "nPr = num_eval(pr.p_r,\n",
     "                qmassratio = qmassratio, nr=nr,\n",
     "                nchi1x=nchi1x, nchi1y=nchi1y, nchi1z=nchi1z,\n",
     "                nchi2x=nchi2x, nchi2y=nchi2y, nchi2z=nchi2z,  nPt=nPt)\n",
