Tutorial-GiRaFFE_NRPy-Metric_Face_Values: Changed the workaround to interpolate phi instead of psi4.

--- a/in_progress/Tutorial-GiRaFFE_NRPy-Metric_Face_Values.ipynb
+++ b/in_progress/Tutorial-GiRaFFE_NRPy-Metric_Face_Values.ipynb
@@ -230,20 +230,20 @@
     "                }\n",
     "            }\n",
     "        }\n",
+    "    }\n",
     "#ifdef WORKAROUND_ENABLED\n",
-    "        for (int i2 = NGHOSTS;i2 < Nxx2+NGHOSTS+1;i2++) {\n",
-    "            for (int i1 = NGHOSTS;i1 < Nxx1+NGHOSTS+1;i1++) {\n",
-    "                for (int i0 = NGHOSTS;i0 < Nxx0+NGHOSTS+1;i0++) {\n",
-    "                    Qm2 = auxevol_gfs[IDX4S(PSI4FACTORGF,i0-2*kronecker_delta[flux_dirn][0],i1-2*kronecker_delta[flux_dirn][1],i2-2*kronecker_delta[flux_dirn][2])];\n",
-    "                    Qm1 = auxevol_gfs[IDX4S(PSI4FACTORGF,i0-kronecker_delta[flux_dirn][0],i1-kronecker_delta[flux_dirn][1],i2-kronecker_delta[flux_dirn][2])];\n",
-    "                    Qp0 = auxevol_gfs[IDX4S(PSI4FACTORGF,i0,i1,i2)];\n",
-    "                    Qp1 = auxevol_gfs[IDX4S(PSI4FACTORGF,i0+kronecker_delta[flux_dirn][0],i1+kronecker_delta[flux_dirn][1],i2+kronecker_delta[flux_dirn][2])];\n",
-    "                    auxevol_gfs[IDX4S(PSI6_TEMPGF,i0,i1,i2)] = COMPUTE_FCVAL(Qm2,Qm1,Qp0,Qp1);\n",
-    "                }\n",
+    "    for (int i2 = NGHOSTS;i2 < Nxx2+NGHOSTS+1;i2++) {\n",
+    "        for (int i1 = NGHOSTS;i1 < Nxx1+NGHOSTS+1;i1++) {\n",
+    "            for (int i0 = NGHOSTS;i0 < Nxx0+NGHOSTS+1;i0++) {\n",
+    "                Qm2 = auxevol_gfs[IDX4S(PHIGF,i0-2*kronecker_delta[flux_dirn][0],i1-2*kronecker_delta[flux_dirn][1],i2-2*kronecker_delta[flux_dirn][2])];\n",
+    "                Qm1 = auxevol_gfs[IDX4S(PHIGF,i0-kronecker_delta[flux_dirn][0],i1-kronecker_delta[flux_dirn][1],i2-kronecker_delta[flux_dirn][2])];\n",
+    "                Qp0 = auxevol_gfs[IDX4S(PHIGF,i0,i1,i2)];\n",
+    "                Qp1 = auxevol_gfs[IDX4S(PHIGF,i0+kronecker_delta[flux_dirn][0],i1+kronecker_delta[flux_dirn][1],i2+kronecker_delta[flux_dirn][2])];\n",
+    "                auxevol_gfs[IDX4S(PSI6_TEMPGF,i0,i1,i2)] = COMPUTE_FCVAL(Qm2,Qm1,Qp0,Qp1);\n",
     "            }\n",
     "        }\n",
-    "#endif /*WORKAROUND_ENABLED*/\n",
     "    }\n",
+    "#endif /*WORKAROUND_ENABLED*/\n",
     "\n",
     "\"\"\",\n",
     "    rel_path_for_Cparams=os.path.join(\"../\"))\n",
