--- a/in_progress/Tutorial-GiRaFFE_NRPy_Main_Driver_staggered.ipynb
+++ b/in_progress/Tutorial-GiRaFFE_NRPy_Main_Driver_staggered.ipynb
@@ -507,8 +507,9 @@
     "import sympy as sp                # SymPy: The Python computer algebra package upon which NRPy+ depends\n",
     "# First calculate the conformal factor psi^4 = detgamma^(1/3)\n",
     "_gammaUU, gammaDET = ixp.symm_matrix_inverter3x3(gammaDD) # _gammaUU unused.\n",
-    "psi4factor = gri.register_gridfunctions(\"AUXEVOL\",\"psi4factor\")\n",
+    "phi = gri.register_gridfunctions(\"AUXEVOL\",\"phi\")\n",
     "psi4 = sp.cbrt(gammaDET)\n",
+    "phi_expression = sp.Rational(1,4)*sp.log(psi4)\n",
     "# Rescale gammaDD: gammabarDD = gammaDD/psi4\n",
     "gammabarDD = ixp.zerorank2(DIM=3)\n",
     "for i in range(3):\n",
@@ -523,7 +524,7 @@
     "                   lhrh(lhs=gri.gfaccess(\"auxevol_gfs\",\"gammaDD11\"),rhs=gammabarDD[1][1]),\n",
     "                   lhrh(lhs=gri.gfaccess(\"auxevol_gfs\",\"gammaDD12\"),rhs=gammabarDD[1][2]),\n",
     "                   lhrh(lhs=gri.gfaccess(\"auxevol_gfs\",\"gammaDD22\"),rhs=gammabarDD[2][2]),\n",
-    "                   lhrh(lhs=gri.gfaccess(\"auxevol_gfs\",\"psi4factor\"),rhs=psi4)\n",
+    "                   lhrh(lhs=gri.gfaccess(\"auxevol_gfs\",\"phi\"),rhs=phi_expression)\n",
     "                  ]\n",
     "\n",
     "desc = \"Convert ADM metric to BSSN\"\n",
@@ -539,7 +540,7 @@
     "for i in range(3):\n",
     "    for j in range(3):\n",
     "        # Here, gammaDD actually represents gammabarDD, but recall that we converted in place.\n",
-    "        rescaled_gammaDD[i][j] = gammaDD[i][j]*psi4factor\n",
+    "        rescaled_gammaDD[i][j] = gammaDD[i][j]*sp.exp(4*phi)\n",
     "# We'll convert the metric in place to ensure compatibility with our metric face interpolator\n",
     "values_to_print = [\n",
     "                   lhrh(lhs=gri.gfaccess(\"auxevol_gfs\",\"gammaDD00\"),rhs=rescaled_gammaDD[0][0]),\n",
@@ -553,7 +554,7 @@
     "C_code_kernel = fin.FD_outputC(\"returnstring\",values_to_print,params=outCparams)\\\n",
     "                   .replace(\"IDX4\",\"IDX4S\")\n",
     "# .replace(\"in_gfs\",\"auxevol_gfs\")\n",
-    "C_face_kernel = C_code_kernel.replace(\"GAMMA\",\"GAMMA_FACE\").replace(\"PSI4FACTORGF\",\"PSI6_TEMPGF\")\n",
+    "C_face_kernel = C_code_kernel.replace(\"GAMMA\",\"GAMMA_FACE\").replace(\"PHIGF\",\"PSI6_TEMPGF\")\n",
     "\n",
     "desc = \"Convert BSSN metric to ADM\"\n",
     "name = \"Workaround_BSSN_to_ADM\"\n",
