GiRaFFE_NRPy: These changes implement a workaround that mimics the old GiRaFFE's metric interpolation better to test for agreement.

--- a/in_progress/Tutorial-GiRaFFE_NRPy_Main_Driver_staggered.ipynb
+++ b/in_progress/Tutorial-GiRaFFE_NRPy_Main_Driver_staggered.ipynb
@@ -183,7 +183,9 @@
     "gri.register_gridfunctions(\"AUXEVOL\",\"cmax_z\")\n",
     "gri.register_gridfunctions(\"AUXEVOL\",\"cmin_z\")\n",
     "\n",
-    "# gri.register_gridfunctions(\"AUXEVOL\",\"cf\") # Needed only for ADM-BSSN-ADM workaround"
+    "phi = gri.register_gridfunctions(\"AUXEVOL\",\"phi\") # Needed only for ADM-BSSN-ADM workaround\n",
+    "gammaUUxx,gammaUUyy,gammaUUzz = gri.register_gridfunctions(\"AUXEVOL\",[\"gammaUUxx\",\"gammaUUyy\",\"gammaUUzz\"])\n",
+    "gamma_faceUUxx,gamma_faceUUyy,gamma_faceUUzz = gri.register_gridfunctions(\"AUXEVOL\",[\"gamma_faceUUxx\",\"gamma_faceUUyy\",\"gamma_faceUUzz\"])"
    ]
   },
   {
@@ -324,7 +326,6 @@
    "outputs": [],
    "source": [
     "import GiRaFFE_NRPy.Stilde_flux as Sf\n",
-    "subdir = \"RHSs\"\n",
     "Sf.generate_C_code_for_Stilde_flux(os.path.join(out_dir,subdir), True, alpha_face,gamma_faceDD,beta_faceU,\n",
     "                                   Valenciav_rU,B_rU,Valenciav_lU,B_lU,sqrt4pi,write_cmax_cmin=True)"
    ]
@@ -413,13 +414,13 @@
     "import GiRaFFE_NRPy.GiRaFFE_NRPy_C2P_P2C as C2P_P2C\n",
     "C2P_P2C.GiRaFFE_NRPy_C2P(StildeD,BU,gammaDD,betaU,alpha)\n",
     "\n",
-    "values_to_print = [\\\n",
-    "                   lhrh(lhs=gri.gfaccess(\"in_gfs\",\"StildeD0\"),rhs=C2P_P2C.outStildeD[0]),\\\n",
-    "                   lhrh(lhs=gri.gfaccess(\"in_gfs\",\"StildeD1\"),rhs=C2P_P2C.outStildeD[1]),\\\n",
-    "                   lhrh(lhs=gri.gfaccess(\"in_gfs\",\"StildeD2\"),rhs=C2P_P2C.outStildeD[2]),\\\n",
-    "                   lhrh(lhs=gri.gfaccess(\"auxevol_gfs\",\"ValenciavU0\"),rhs=C2P_P2C.ValenciavU[0]),\\\n",
-    "                   lhrh(lhs=gri.gfaccess(\"auxevol_gfs\",\"ValenciavU1\"),rhs=C2P_P2C.ValenciavU[1]),\\\n",
-    "                   lhrh(lhs=gri.gfaccess(\"auxevol_gfs\",\"ValenciavU2\"),rhs=C2P_P2C.ValenciavU[2])\\\n",
+    "values_to_print = [\n",
+    "                   lhrh(lhs=gri.gfaccess(\"in_gfs\",\"StildeD0\"),rhs=C2P_P2C.outStildeD[0]),\n",
+    "                   lhrh(lhs=gri.gfaccess(\"in_gfs\",\"StildeD1\"),rhs=C2P_P2C.outStildeD[1]),\n",
+    "                   lhrh(lhs=gri.gfaccess(\"in_gfs\",\"StildeD2\"),rhs=C2P_P2C.outStildeD[2]),\n",
+    "                   lhrh(lhs=gri.gfaccess(\"auxevol_gfs\",\"ValenciavU0\"),rhs=C2P_P2C.ValenciavU[0]),\n",
+    "                   lhrh(lhs=gri.gfaccess(\"auxevol_gfs\",\"ValenciavU1\"),rhs=C2P_P2C.ValenciavU[1]),\n",
+    "                   lhrh(lhs=gri.gfaccess(\"auxevol_gfs\",\"ValenciavU2\"),rhs=C2P_P2C.ValenciavU[2])\n",
     "                  ]\n",
     "\n",
     "subdir = \"C2P\"\n",
@@ -507,7 +508,6 @@
     "import sympy as sp                # SymPy: The Python computer algebra package upon which NRPy+ depends\n",
     "# First calculate the conformal factor psi^4 = detgamma^(1/3)\n",
     "_gammaUU, gammaDET = ixp.symm_matrix_inverter3x3(gammaDD) # _gammaUU unused.\n",
-    "phi = gri.register_gridfunctions(\"AUXEVOL\",\"phi\")\n",
     "psi4 = sp.cbrt(gammaDET)\n",
     "phi_expression = sp.Rational(1,4)*sp.log(psi4)\n",
     "# Rescale gammaDD: gammabarDD = gammaDD/psi4\n",
@@ -515,6 +515,9 @@
     "for i in range(3):\n",
     "    for j in range(3):\n",
     "        gammabarDD[i][j] = gammaDD[i][j]/psi4\n",
+    "gammabarUUxx = gammaUUxx*psi4\n",
+    "gammabarUUyy = gammaUUyy*psi4\n",
+    "gammabarUUzz = gammaUUzz*psi4\n",
     "# Generate a kernel to convert to BSSN:\n",
     "# We'll convert the metric in place to ensure compatibility with our metric face interpolator\n",
     "values_to_print = [\n",
@@ -524,7 +527,10 @@
     "                   lhrh(lhs=gri.gfaccess(\"auxevol_gfs\",\"gammaDD11\"),rhs=gammabarDD[1][1]),\n",
     "                   lhrh(lhs=gri.gfaccess(\"auxevol_gfs\",\"gammaDD12\"),rhs=gammabarDD[1][2]),\n",
     "                   lhrh(lhs=gri.gfaccess(\"auxevol_gfs\",\"gammaDD22\"),rhs=gammabarDD[2][2]),\n",
-    "                   lhrh(lhs=gri.gfaccess(\"auxevol_gfs\",\"phi\"),rhs=phi_expression)\n",
+    "                   lhrh(lhs=gri.gfaccess(\"auxevol_gfs\",\"phi\"),rhs=phi_expression),\n",
+    "                   lhrh(lhs=gri.gfaccess(\"auxevol_gfs\",\"gammaUUxx\"),rhs=gammabarUUxx),\n",
+    "                   lhrh(lhs=gri.gfaccess(\"auxevol_gfs\",\"gammaUUyy\"),rhs=gammabarUUyy),\n",
+    "                   lhrh(lhs=gri.gfaccess(\"auxevol_gfs\",\"gammaUUzz\"),rhs=gammabarUUzz),\n",
     "                  ]\n",
     "\n",
     "desc = \"Convert ADM metric to BSSN\"\n",
@@ -541,6 +547,9 @@
     "    for j in range(3):\n",
     "        # Here, gammaDD actually represents gammabarDD, but recall that we converted in place.\n",
     "        rescaled_gammaDD[i][j] = gammaDD[i][j]*sp.exp(4*phi)\n",
+    "rescaled_gammaUUxx = gammaUUxx/sp.exp(4*phi)\n",
+    "rescaled_gammaUUyy = gammaUUyy/sp.exp(4*phi)\n",
+    "rescaled_gammaUUzz = gammaUUzz/sp.exp(4*phi)\n",
     "# We'll convert the metric in place to ensure compatibility with our metric face interpolator\n",
     "values_to_print = [\n",
     "                   lhrh(lhs=gri.gfaccess(\"auxevol_gfs\",\"gammaDD00\"),rhs=rescaled_gammaDD[0][0]),\n",
@@ -548,22 +557,26 @@
     "                   lhrh(lhs=gri.gfaccess(\"auxevol_gfs\",\"gammaDD02\"),rhs=rescaled_gammaDD[0][2]),\n",
     "                   lhrh(lhs=gri.gfaccess(\"auxevol_gfs\",\"gammaDD11\"),rhs=rescaled_gammaDD[1][1]),\n",
     "                   lhrh(lhs=gri.gfaccess(\"auxevol_gfs\",\"gammaDD12\"),rhs=rescaled_gammaDD[1][2]),\n",
-    "                   lhrh(lhs=gri.gfaccess(\"auxevol_gfs\",\"gammaDD22\"),rhs=rescaled_gammaDD[2][2])\n",
+    "                   lhrh(lhs=gri.gfaccess(\"auxevol_gfs\",\"gammaDD22\"),rhs=rescaled_gammaDD[2][2]),\n",
+    "                   lhrh(lhs=gri.gfaccess(\"auxevol_gfs\",\"gammaUUxx\"),rhs=rescaled_gammaUUxx),\n",
+    "                   lhrh(lhs=gri.gfaccess(\"auxevol_gfs\",\"gammaUUyy\"),rhs=rescaled_gammaUUyy),\n",
+    "                   lhrh(lhs=gri.gfaccess(\"auxevol_gfs\",\"gammaUUzz\"),rhs=rescaled_gammaUUzz)\n",
     "                  ]\n",
     "\n",
     "C_code_kernel = fin.FD_outputC(\"returnstring\",values_to_print,params=outCparams)\\\n",
     "                   .replace(\"IDX4\",\"IDX4S\")\n",
-    "# .replace(\"in_gfs\",\"auxevol_gfs\")\n",
     "C_face_kernel = C_code_kernel.replace(\"GAMMA\",\"GAMMA_FACE\").replace(\"PHIGF\",\"PSI6_TEMPGF\")\n",
     "\n",
     "desc = \"Convert BSSN metric to ADM\"\n",
     "name = \"Workaround_BSSN_to_ADM\"\n",
-    "outCfunction(\n",
-    "    outfile  = os.path.join(out_dir,name+\".h\"), desc=desc, name=name,\n",
+    "Ccode_function = outCfunction(\n",
+    "    outfile  = \"returnstring\", desc=desc, name=name,\n",
     "    params   =\"const paramstruct *params,REAL *auxevol_gfs\",\n",
     "    body     = C_code_kernel+\"\\n\"+C_face_kernel,\n",
-    "    loopopts =\"AllPoints\",\n",
-    "    rel_path_for_Cparams=os.path.join(\"./\"))"
+    "loopopts =\"InteriorPoints\",\n",
+    "rel_path_for_Cparams=os.path.join(\"./\")).replace(\"NGHOSTS+Nxx0\",\"NGHOSTS+Nxx0+1\").replace(\"NGHOSTS+Nxx1\",\"NGHOSTS+Nxx1+1\").replace(\"NGHOSTS+Nxx2\",\"NGHOSTS+Nxx2+1\")\n",
+    "with open(os.path.join(out_dir,name+\".h\"),\"w\") as file:\n",
+    "    file.write(Ccode_function)"
    ]
   },
   {
