GiRaFFE_NRPy: Some small miscellaneous updates to these notebooks.

--- a/in_progress/Tutorial-GiRaFFE_NRPy-Introduction.ipynb
+++ b/in_progress/Tutorial-GiRaFFE_NRPy-Introduction.ipynb
@@ -80,7 +80,35 @@
     "[Komisarrov, 2004](https://academic.oup.com/mnras/article/350/2/427/1113688)\n",
     "\n",
     "This paper naturally has several code tests in common with GiRaFFE; that is, they are the same between this paper, the original GiRaFFE paper, and what I’m working on now. For instance there are 1D tests of the characteristic waves of the equations and tests of static solutions, like the previously mentioned exact wald, and black hole magnetospheres such as the Magnetospheric Wald solution and the split-monopole. One particular thing I noticed is that they performed a dedicated test to study how their code handled current sheets; I also noticed that their paper doesn’t mention using a dedicated current sheet prescription. Their current sheet test instead analyzes the dissipation caused by different reconstruction methods.\n",
-    "[Mahlmann, Aloy, Mewes, Cerdá-Durán, 2020](https://arxiv.org/abs/2007.06580)"
+    "[Mahlmann, Aloy, Mewes, Cerdá-Durán, 2020](https://arxiv.org/abs/2007.06580)\n",
+    "\n",
+    "https://arxiv.org/pdf/astro-ph/0210618.pdf \n",
+    "\n",
+    "https://arxiv.org/pdf/astro-ph/0402403.pdf \n",
+    "\n",
+    "https://arxiv.org/pdf/astro-ph/0501599.pdf \n",
+    "\n",
+    "https://arxiv.org/pdf/astro-ph/0503420.pdf \n",
+    "\n",
+    "https://arxiv.org/pdf/astro-ph/0510310.pdf \n",
+    "\n",
+    "https://arxiv.org/pdf/astro-ph/0601410.pdf \n",
+    "\n",
+    "https://arxiv.org/pdf/1009.2468.pdf \n",
+    "\n",
+    "https://arxiv.org/pdf/1112.2622.pdf \n",
+    "\n",
+    "https://arxiv.org/pdf/1304.1805.pdf \n",
+    "\n",
+    "https://arxiv.org/pdf/1310.3274.pdf \n",
+    "\n",
+    "https://arxiv.org/pdf/1501.07276.pdf \n",
+    "\n",
+    "https://arxiv.org/pdf/1704.00599.pdf \n",
+    "\n",
+    "https://arxiv.org/abs/2002.06225 \n",
+    "\n",
+    "https://arxiv.org/pdf/2007.06580.pdf "
    ]
   },
   {
