--- a/in_progress/Tutorial-Start_to_Finish_UnitTest-GiRaFFE_NRPy-Metric_Face_Values.ipynb
+++ b/in_progress/Tutorial-Start_to_Finish_UnitTest-GiRaFFE_NRPy-Metric_Face_Values.ipynb
@@ -428,18 +428,18 @@
       "\n",
       "Compiling executable...\n",
       "(EXEC): Executing `gcc -Ofast -fopenmp -march=native -funroll-loops Validation/FCVAL_unit_test.c -o Validation/FCVAL_unit_test.exe -lm`...\n",
-      "(BENCH): Finished executing in 1.0330591201782227 seconds.\n",
+      "(BENCH): Finished executing in 1.2470715045928955 seconds.\n",
       "Finished compilation.\n",
-      "Finished in 1.18806791305542 seconds.\n",
+      "Finished in 1.5100862979888916 seconds.\n",
       "\n",
       "\n",
       "Now running...\n",
       "\n",
       "(EXEC): Executing `cmd /c Validation\\FCVAL_unit_test 10 10 10`...\n",
-      "(BENCH): Finished executing in 0.23601365089416504 seconds.\n",
+      "(BENCH): Finished executing in 0.2760159969329834 seconds.\n",
       "(EXEC): Executing `cmd /c Validation\\FCVAL_unit_test 20 20 20`...\n",
-      "(BENCH): Finished executing in 0.2540144920349121 seconds.\n",
-      "Finished in 0.7620437145233154 seconds.\n",
+      "(BENCH): Finished executing in 0.23801350593566895 seconds.\n",
+      "Finished in 0.9340534210205078 seconds.\n",
       "\n",
       "\n"
      ]
@@ -477,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -491,13 +491,6 @@
       "needs_background": "light"
      },
      "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "True\n"
-     ]
     }
    ],
    "source": [
@@ -558,7 +551,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Notebook output to PDF is only supported on Linux systems, with pdflatex installed.\n"
+      "pdflatex: security risk: running with elevated privileges\n",
+      "pdflatex: security risk: running with elevated privileges\n",
+      "pdflatex: security risk: running with elevated privileges\n",
+      "Created Tutorial-Start_to_Finish_UnitTest-GiRaFFE_NRPy-\n",
+      "    Metric_Face_Values.tex, and compiled LaTeX file to PDF file Tutorial-\n",
+      "    Start_to_Finish_UnitTest-GiRaFFE_NRPy-Metric_Face_Values.pdf\n"
      ]
     }
    ],
