NRPyPN: Add more detailed instructions

--- a/NRPyPN/NRPyPN.ipynb
+++ b/NRPyPN/NRPyPN.ipynb
@@ -91,9 +91,9 @@
    "source": [
     "## Fast $p_t$ and $p_r$ for binary black hole initial data\n",
     "\n",
-    "**Instructions:** Set the following 8 parameters for the binary black hole system, which assume the black holes are situated initially on the $x$-axis and orbiting instantaneously in the $x$-$y$ plane, with the center-of-mass at $x=y=z=0$. Note that other initial coordinate configurations are possible; just permute the coordinates consi\n",
+    "**Instructions:** Set the following 8 parameters for the binary black hole system, which assume the black holes are situated initially on the $x$-axis and orbiting instantaneously in the $x$-$y$ plane, with the center-of-mass at $x=y=z=0$. Note that other initial coordinate configurations are possible; just permute the coordinates consistently with a right-handed coordinate system. For example $(x,y,z)\\to(z,x,y)$ if one desires the black holes to be on the $z-axis$ instantaneously orbiting on the $z$-$x$ plane; or $(x,y,z)\\to(y,z,x)$ if one desires the black holes to be on the $y-axis$ instantaneously orbiting on the $y$-$z$ plane.\n",
     "\n",
-    "After setting the parameters press *Shift+Enter*. The tangential and radial components of the orbital momentum vector will be computed and output."
+    "After setting the parameters press *Shift+Enter* in the code cell below. The tangential and radial components of the orbital momentum vector will be computed and output."
    ]
   },
   {
