NRPyPN: Add more detailed instructions

--- a/NRPyPN/NRPyPN.ipynb
+++ b/NRPyPN/NRPyPN.ipynb
@@ -91,9 +91,19 @@
    "source": [
     "## Fast $p_t$ and $p_r$ for binary black hole initial data\n",
     "\n",
-    "**Instructions:** Set the following 8 parameters for the binary black hole system, which assume the black holes are situated initially on the $x$-axis and orbiting instantaneously in the $x$-$y$ plane, with the center-of-mass at $x=y=z=0$. Note that other initial coordinate configurations are possible; just permute the coordinates consistently with a right-handed coordinate system. For example $(x,y,z)\\to(z,x,y)$ if one desires the black holes to be on the $z-axis$ instantaneously orbiting on the $z$-$x$ plane; or $(x,y,z)\\to(y,z,x)$ if one desires the black holes to be on the $y-axis$ instantaneously orbiting on the $y$-$z$ plane.\n",
+    "**Assumptions:**\n",
     "\n",
-    "After setting the parameters press *Shift+Enter* in the code cell below. The tangential and radial components of the orbital momentum vector will be computed and output."
+    "The following code cell assumes the black holes are \n",
+    "\n",
+    "* situated initially on the $x$-axis, with black hole 1 at $x>0$, and black hole 2 at $x<0$\n",
+    "* orbiting instantaneously in the $x$-$y$ plane, with the center-of-mass at $x=y=z=0$. \n",
+    "\n",
+    "Note that other initial coordinate configurations are possible; just permute the coordinates consistently with a right-handed coordinate system. For example,\n",
+    "\n",
+    "* perform the conversion $(x,y,z)\\to(z,x,y)$ if one desires the black holes to be on the $z-axis$ instantaneously orbiting on the $z$-$x$ plane; or \n",
+    "* perform the conversion $(x,y,z)\\to(y,z,x)$ if one desires the black holes to be on the $y-axis$ instantaneously orbiting on the $y$-$z$ plane.\n",
+    "\n",
+    "**Instructions:** Set the 8 parameters for the binary black hole system in the code cell below, which make the above assumptions. Then after setting the parameters press *Shift+Enter*. The tangential and radial components of the orbital momentum vector will be computed and output."
    ]
   },
   {
@@ -118,13 +128,13 @@
     "# Dimensionless spin parameters of each black hole, assuming\n",
     "#   the black holes are initially orbiting on the xy-plane\n",
     "#   and situated on the x-axis, with the center-of-mass at\n",
-    "#   x=y=z=0.\n",
-    "nchi1x     = +0.   # chi_{1x}, x-component of dimensionless spin for black hole 1\n",
-    "nchi1y     = +0.   # chi_{1y}, y-component of dimensionless spin for black hole 1\n",
-    "nchi1z     = +0.6  # chi_{1z}, z-component of dimensionless spin for black hole 1\n",
-    "nchi2x     = +0.   # chi_{2x}, x-component of dimensionless spin for black hole 2\n",
-    "nchi2y     = +0.   # chi_{2y}, y-component of dimensionless spin for black hole 2\n",
-    "nchi2z     = +0.6  # chi_{2z}, z-component of dimensionless spin for black hole 2\n",
+    "#   x=y=z=0. Black hole 1 is at x>0; and black hole 2 at x<0.\n",
+    "nchi1x     = +0.   # chi_{1x}, x-component of dimensionless spin for black hole 1 (instantaneously at x>0)\n",
+    "nchi1y     = +0.   # chi_{1y}, y-component of dimensionless spin for black hole 1 (instantaneously at x>0)\n",
+    "nchi1z     = +0.6  # chi_{1z}, z-component of dimensionless spin for black hole 1 (instantaneously at x>0)\n",
+    "nchi2x     = +0.   # chi_{2x}, x-component of dimensionless spin for black hole 2 (instantaneously at x<0)\n",
+    "nchi2y     = +0.   # chi_{2y}, y-component of dimensionless spin for black hole 2 (instantaneously at x<0)\n",
+    "nchi2z     = +0.6  # chi_{2z}, z-component of dimensionless spin for black hole 2 (instantaneously at x<0)\n",
     "\n",
     "##########################################################\n",
     "#### DON'T TOUCH; see output after running this cell. ####\n",
