NRPyPN.ipynb: discussion about inserting input/computed quantities into TwoPunctures

--- a/NRPyPN/NRPyPN.ipynb
+++ b/NRPyPN/NRPyPN.ipynb
@@ -103,7 +103,21 @@
     "* perform the conversion $(x,y,z)\\to(z,x,y)$ if one desires the black holes to be on the $z-axis$ instantaneously orbiting on the $z$-$x$ plane; or \n",
     "* perform the conversion $(x,y,z)\\to(y,z,x)$ if one desires the black holes to be on the $y-axis$ instantaneously orbiting on the $y$-$z$ plane.\n",
     "\n",
-    "**Instructions:** Set the 8 parameters for the binary black hole system in the code cell below, which make the above assumptions. Then after setting the parameters press *Shift+Enter*. The tangential and radial components of the orbital momentum vector will be computed and output."
+    "**Instructions:** Set the 8 parameters for the binary black hole system in the code cell below, which make the above assumptions. Then after setting the parameters press *Shift+Enter*. The tangential and radial components of the orbital momentum vector will be computed and output.\n",
+    "\n",
+    "**If using `TwoPunctures`:** If you plan to use these parameters with TwoPunctures, you will need to set\n",
+    "\n",
+    "* `TwoPunctures::give_bare_masses = no`\n",
+    "* `TwoPunctures::target_m_minus = ` $q/(1+q)$\n",
+    "* `TwoPunctures::target_m_plus = ` $1/(1+q)$\n",
+    "* `TwoPunctures::par_P_plus[0] = -|P_r|` (from code cell output below)\n",
+    "* `TwoPunctures::par_P_plus[1] = +|P_t|` (from code cell output below)\n",
+    "* `TwoPunctures::par_P_minus[0] = +|P_r|` (from code cell output below)\n",
+    "* `TwoPunctures::par_P_minus[1] = -|P_t|` (from code cell output below)\n",
+    "* `TwoPunctures::par_S_plus[0] = nchi1x*TwoPunctures::target_m_plus*TwoPunctures::target_m_plus` (from input into code cell below)\n",
+    "* `TwoPunctures::par_S_plus[1] = nchi1y*TwoPunctures::target_m_plus*TwoPunctures::target_m_plus` (from input into code cell below)\n",
+    "* `TwoPunctures::par_S_plus[2] = nchi1z*TwoPunctures::target_m_plus*TwoPunctures::target_m_plus` (from input into code cell below)\n",
+    "* *similarly* for `TwoPunctures::par_S_minus[]`"
    ]
   },
   {
