Small to changes to boundary condition driver call

--- a/Tutorial-Start_to_Finish-ScalarWaveCurvilinear.ipynb
+++ b/Tutorial-Start_to_Finish-ScalarWaveCurvilinear.ipynb
@@ -334,11 +334,12 @@
     "                                    Cparamspath=os.path.join(\"../\"),\n",
     "                                    BoundaryCondition=BoundaryCondition)\n",
     "if BoundaryCondition == \"Sommerfeld\":\n",
-    "    bcs = cbcs.sommerfeld_bc(vars_radial_falloff_power_default=3., vars_speed_default=1., \\\n",
-    "                             vars_at_inf_default=0.)\n",
+    "    bcs = cbcs.sommerfeld_boundary_condition_class(fd_order=2,\n",
+    "                                                 vars_radial_falloff_power_default=3,\n",
+    "                                                 vars_speed_default=1.,\n",
+    "                                                 vars_at_inf_default=0.)\n",
     "    # bcs.vars_radpower.items()\n",
-    "    # bcs.vars_at_infinity['UUGF'] = 2.\n",
-    "    bcs.write_sommerfeld_files(Ccodesdir, fd_order = 2)"
+    "    bcs.write_sommerfeld_file(Ccodesdir)"
    ]
   },
   {
@@ -706,12 +707,12 @@
      "text": [
       "Compiling executable...\n",
       "(EXEC): Executing `gcc -Ofast -fopenmp -march=native -funroll-loops ScalarWaveCurvilinear_Playground_Ccodes/ScalarWaveCurvilinear_Playground.c -o ScalarWaveCurvilinear_Playground_Ccodes/output/ScalarWaveCurvilinear_Playground -lm`...\n",
-      "(BENCH): Finished executing in 2.010824680328369 seconds.\n",
+      "(BENCH): Finished executing in 1.40616774559021 seconds.\n",
       "Finished compilation.\n",
       "(EXEC): Executing `taskset -c 0,1,2,3,4,5 ./ScalarWaveCurvilinear_Playground 16  8 16`...\n",
-      "(BENCH): Finished executing in 1.6129415035247803 seconds.\n",
+      "(BENCH): Finished executing in 0.20442819595336914 seconds.\n",
       "(EXEC): Executing `taskset -c 0,1,2,3,4,5 ./ScalarWaveCurvilinear_Playground 24 12 24`...\n",
-      "(BENCH): Finished executing in 1.4139254093170166 seconds.\n"
+      "(BENCH): Finished executing in 1.008134365081787 seconds.\n"
      ]
     }
    ],
@@ -789,7 +790,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {
     "scrolled": true
    },
@@ -909,7 +910,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
